app-deployment.yaml
# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   name: url-shortener
# spec:
#   replicas: 3
#   selector:
#     matchLabels:
#       app: url-shortener
#   template:
#     metadata:
#       labels:
#         app: url-shortener
#     spec:
#       containers:
#       - name: url-shortener
#         image: url-shortener:latest
#         imagePullPolicy: Never
#         ports:
#         - containerPort: 5000
#         env:
#           - name: REDIS_HOST
#             value: "redis-service"
#           - name: REDIS_PORT
#             value: "6379"



apiVersion: apps/v1
kind: Deployment
metadata:
  name: url-shortener
spec:
  replicas: 3 
  selector:
    matchLabels:
      app: url-shortener
  template:
    metadata:
      labels:
        app: url-shortener
    spec:
      containers:
      - name: url-shortener
        image: url-shortener:latest 
        resources:
          requests:
            cpu: "250m"
          limits:
            cpu: "500m"
        imagePullPolicy: Never
        ports:
        - containerPort: 5000
